--- a/GreedyAlgorithem/008_Efficient_Huffman_Coding/008_Efficient_Huffman_Coding.csproj
+++ b/GreedyAlgorithem/008_Efficient_Huffman_Coding/008_Efficient_Huffman_Coding.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1BC7099D-D83F-4F97-BC45-BE3C06BE2B32}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <RootNamespace>Utilities</RootNamespace>
-    <AssemblyName>Utilities</AssemblyName>
+    <ProjectGuid>{90DCAEEC-084E-46B2-A1AD-08F98C19FAD0}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>_008_Efficient_Huffman_Coding</RootNamespace>
+    <AssemblyName>008_Efficient_Huffman_Coding</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -32,9 +32,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -46,9 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Helper.cs" />
-    <Compile Include="Models.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
