Efficient huffman coding

--- a/GreedyAlgorithem/008_Efficient_Huffman_Coding/008_Efficient_Huffman_Coding.csproj
+++ b/GreedyAlgorithem/008_Efficient_Huffman_Coding/008_Efficient_Huffman_Coding.csproj
@@ -49,5 +49,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Utilities\Utilities.csproj">
+      <Project>{1bc7099d-d83f-4f97-bc45-be3c06be2b32}</Project>
+      <Name>Utilities</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
